[package]
name = "byteforge"
version = "0.1.7"
edition = "2024"
description = "A modern Rust + GPUI binary editor prototype with virtualized hex rendering and piece-table editing."
license = "MIT"
repository = "https://github.com/gack951/byteforge"
readme = "README.md"
keywords = ["binary-editor", "hex-editor", "gpui", "rust"]
categories = ["development-tools"]

[dependencies]
anyhow = "1"
encoding_rs = "0.8"
gpui = "0.2.2"
gpui-component = "0.5.1"
memmap2 = "0.9"
rfd = "0.15"

[dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
